fix: post aligned without padding

--- a/codebuddy-repo/src/pages/GrupoDetails/GrupoDetails.module.css
+++ b/codebuddy-repo/src/pages/GrupoDetails/GrupoDetails.module.css
@@ -1,6 +1,7 @@
 .postsContainer {
   display: flex;
   align-items: center;
+  align-content: center;
   flex-direction: column;
   max-height: 50vh;
   overflow: auto; /* Use auto to show scroll only when necessary */
@@ -9,8 +10,9 @@
 .postsWrapper {
   width: 100%;
   display: flex;
+  align-items: center;
+  align-content: center;
   flex-direction: column;
-  padding-left: 95vh;
   padding-top: 2vh;
   gap: 20px;
 }
